--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "playwithme",
-  "version": "1.0.0",
-  "description": "Streaming de musique",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PiR00/playwithme.git"
-  },
-  "author": "Pierre THIEBERT - Web-Generation",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PiR00/playwithme/issues"
-  },
-  "homepage": "https://github.com/PiR00/playwithme#readme"
+  "dependencies": {
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.15.5",
+    "morgan": "~1.9.0",
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^2.0.4",
+    "websocket": "^1.0.25"
+  }
 }
